# pccoe_hackathon

./: .gitignore  README.md
Backend/guardian-engine/: .gitignore  README.MD  app.py  process.py  pyproject.toml  setup.bash
Backend/guardian-engine/docs/: installation.md  presidio_V2.md
Backend/guardian-engine/docs/image-redactor/: index.md
Backend/guardian-engine/guardian-analyzer/: README.md  app.py  download_transformer.py  drm_pdf_manager.py  image_redactor.py  install_nlp_models.py  new_pdf_redactor.py  old_pdf_redactor.py  pdf_redactor.py  pyproject.toml  requirements.txt  uninstall_nlp_models.py
Backend/guardian-engine/guardian-analyzer/guardian_analyzer/: __init__.py  analyzer_engine.py  analyzer_engine_provider.py  analyzer_request.py  batch_analyzer_engine.py  dict_analyzer_result.py  entity_recognizer.py  local_recognizer.py  pattern_recognizer.py  recognizer_result.py  remote_recognizer.py
Backend/guardian-engine/guardian-analyzer/guardian_analyzer/conf/: default.yaml  default_recognizers.yaml
Backend/guardian-engine/guardian-analyzer/guardian_analyzer/context_aware_enhancers/: context_aware_enhancer.py  lemma_context_aware_enhancer.py
Backend/guardian-engine/guardian-analyzer/guardian_analyzer/nlp_engine/: ner_model_configuration.py  nlp_engine.py  nlp_engine_provider.py  spacy_nlp_engine.py  stanza_nlp_engine.py  transformers_nlp_engine.py
Backend/guardian-engine/guardian-analyzer/guardian_analyzer/predefined_recognizers/: __init__.py  aba_routing_recognizer.py  au_abn_recognizer.py  au_acn_recognizer.py  au_medicare_recognizer.py  au_tfn_recognizer.py  azure_ai_language.py  credit_card_recognizer.py  crypto_recognizer.py  date_recognizer.py  email_recognizer.py  es_nie_recognizer.py  es_nif_recognizer.py  fi_personal_identity_code_recognizer.py  iban_recognizer.py  in_aadhaar_recognizer.py  in_bank_passbook_recognizer.py  in_bank_statement_recognizer.py  in_degree_certificate_recognizer.py  in_driving_license_recognizer.py  in_education_marksheet_recognizer.py  in_electricity_bill_recognizer.py  in_form16_tds_recognizer.py  in_gst_certificate_recognizer.py  in_hospital_discharge_recognizer.py  in_itr_recognizer.py  in_medical_insurance_recognizer.py  in_pan_recognizer.py  in_passport_recognizer.py  in_rent_agreement_recognizer.py  in_trade_license_recognizer.py  in_vehicle_registration_recognizer.py  in_voter_recognizer.py  ip_recognizer.py  it_driver_license_recognizer.py  it_fiscal_code_recognizer.py  it_identity_card_recognizer.py  it_passport_recognizer.py  it_vat_code.py  medical_license_recognizer.py  (+16 more)
Backend/guardian-engine/guardian-analyzer/guardian_analyzer/recognizer_registry/: recognizer_registry.py  recognizer_registry_provider.py  recognizers_loader_utils.py
Backend/guardian-engine/guardian-analyzer/tests/: conftest.py  test_aba_routing_recognizer.py  test_analyzer_engine.py  test_analyzer_engine_provider.py  test_analyzer_utils.py  test_assertions.py  test_au_abn_recognizer.py  test_au_acn_recognizer.py  test_au_medicare_recognizer.py  test_au_tfn_recognizer.py  test_azure_ai_language_recognizer.py  test_batch_analyzer_engine.py  test_certificate_number_recognizer.py  test_context_support.py  test_credit_card_recognizer.py  test_crypto_recognizer.py  test_date_recognizer.py  test_email_recognizer.py  test_entity_recognizer.py  test_es_nie_recognizer.py  test_es_nif_recognizer.py  test_fi_personal_identity_code_recognizer.py  test_iban_recognizer.py  test_in_aadhaar_recognizer.py  test_in_pan_recognizer.py  test_in_passport_recognizer.py  test_in_vehicle_registration_recognizer.py  test_in_voter_recognizer.py  test_ip_recognizer.py  test_it_driver_license_recognizer.py  test_it_fiscal_code_recognizer.py  test_it_identity_card_recognizer.py  test_it_passport_recognizer.py  test_it_vat_code_recognizer.py  test_lemma_context_aware_enhancer.py  test_ner_model_configuration.py  test_nlp_engine_provider.py  test_pattern.py  test_pattern_recognizer.py  test_phone_recognizer.py  (+17 more)
Backend/guardian-engine/guardian-analyzer/tests/mocks/: app_tracer_mock.py  nlp_engine_mock.py  recognizer_registry_mock.py
Backend/guardian-engine/presidio-anonymizer/: app.py
Filebrowser/: filebrowser.db
anushka/: app.py  app2.py  app3.py  requirements.txt
backend1/: app.py
backend2/: dashboard.py  requirements.txt  setupusage.md
client/: package-lock.json  package.json
vue-frontend/: .gitignore  components.json  (+4 more)
(+58 files in other folders)
